doce: generate documentations for available functionalities
