# docs/swagger.yaml
@@ -197,7 +197,7 @@ paths:
           description: Found
       summary: Google OAuth Connect
       tags:
-      - auth
+      - auth_1register/login with google
   /auth/login:
     post:
       consumes:
@@ -223,7 +223,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Login user
       tags:
-      - auth
+      - auth_3login
   /auth/logout:
     post:
       description: Logout user and clear cookies
@@ -236,7 +236,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Logout user
       tags:
-      - auth
+      - auth_5logout
   /auth/refresh-token:
     post:
       description: Refresh access token using refresh token
@@ -253,7 +253,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Refresh access token
       tags:
-      - auth
+      - auth_4refresh token
   /auth/register:
     post:
       consumes:
@@ -279,7 +279,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Register user
       tags:
-      - auth
+      - auth_2register
   /auth/reset-password:
     post:
       consumes:
@@ -305,7 +305,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Reset password
       tags:
-      - auth
+      - auth_8reset password
   /auth/send-reset-otp:
     post:
       consumes:
@@ -331,7 +331,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Send OTP for password reset
       tags:
-      - auth
+      - auth_6send otp
   /auth/verify-otp:
     post:
       consumes:
@@ -357,7 +357,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Verify OTP
       tags:
-      - auth
+      - auth_7verify otp
   /candidates:
     post:
       consumes:
@@ -387,7 +387,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Create a new candidate
       tags:
-      - candidates
+      - candidates_1create
   /candidates/{id}:
     delete:
       description: Delete candidate by ID
@@ -410,7 +410,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Delete candidate
       tags:
-      - candidates
+      - candidates_4delete
     get:
       description: Get candidate details by ID
       parameters:
@@ -432,7 +432,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Get candidate by ID
       tags:
-      - candidates
+      - candidates_2get
     put:
       consumes:
       - multipart/form-data
@@ -466,7 +466,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Update candidate
       tags:
-      - candidates
+      - candidates_3update
   /candidates/{id}/certifications:
     get:
       description: Get all certifications for a candidate by candidate ID
@@ -489,7 +489,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Get certifications by candidate ID
       tags:
-      - certifications
+      - certifications_2get
     post:
       consumes:
       - application/json
@@ -519,7 +519,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Create a new certification
       tags:
-      - certifications
+      - certifications_1create
   /candidates/{id}/certifications/{certification_id}:
     delete:
       description: Delete a certification by candidate ID and certification ID
@@ -547,7 +547,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Delete certification
       tags:
-      - certifications
+      - certifications_3delete
   /candidates/{id}/education:
     delete:
       description: Delete an education record by candidate ID
@@ -570,7 +570,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Delete education record
       tags:
-      - education
+      - education_3delete
     get:
       description: Get all education records for a candidate by candidate ID
       parameters:
@@ -592,7 +592,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Get education records by candidate ID
       tags:
-      - education
+      - education_2get
     post:
       consumes:
       - application/json
@@ -622,7 +622,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Create a new education record
       tags:
-      - education
+      - education_1create
   /candidates/{id}/experience:
     delete:
       description: Delete an experience record by candidate ID
@@ -645,7 +645,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Delete experience record
       tags:
-      - experience
+      - experience_3delete
     get:
       description: Get all experience records for a candidate by candidate ID
       parameters:
@@ -667,7 +667,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Get experience records by candidate ID
       tags:
-      - experience
+      - experience_2get
     post:
       consumes:
       - application/json
@@ -697,7 +697,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Create a new experience record
       tags:
-      - experience
+      - experience_1create
   /candidates/{id}/personal-info:
     delete:
       description: Delete personal information for a candidate
@@ -720,7 +720,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Delete personal information
       tags:
-      - personal_info
+      - personal_info_4delete
     get:
       description: Get personal information for a candidate by candidate ID
       parameters:
@@ -742,7 +742,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Get personal information by candidate ID
       tags:
-      - personal_info
+      - personal_info_2get
     post:
       consumes:
       - application/json
@@ -772,7 +772,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Create personal information
       tags:
-      - personal_info
+      - personal_info_1create
     put:
       consumes:
       - application/json
@@ -802,7 +802,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Update personal information
       tags:
-      - personal_info
+      - personal_info_3update
   /candidates/{id}/portfolio:
     get:
       description: Get all projects for a candidate by candidate ID
@@ -825,7 +825,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Get projects by candidate ID
       tags:
-      - portfolio
+      - portfolio_2get
     post:
       consumes:
       - application/json
@@ -855,7 +855,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Create a new project
       tags:
-      - portfolio
+      - portfolio_1create
   /candidates/{id}/portfolio/{project_id}:
     delete:
       description: Delete a project by candidate ID and project ID
@@ -883,7 +883,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Delete project
       tags:
-      - portfolio
+      - portfolio_3delete
   /candidates/{id}/skills:
     get:
       description: Get all skills for a candidate by candidate ID
@@ -906,7 +906,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Get skills by candidate ID
       tags:
-      - skills
+      - skills_2get
     post:
       consumes:
       - application/json
@@ -936,7 +936,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Create a new skill
       tags:
-      - skills
+      - skills_1create
   /candidates/{id}/skills/{skill}:
     delete:
       description: Delete a skill by candidate ID and skill name
@@ -964,7 +964,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Delete skill
       tags:
-      - skills
+      - skills_3delete
   /users:
     get:
       description: Get all users
@@ -981,7 +981,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Get all users
       tags:
-      - users
+      - users_3get
     post:
       consumes:
       - application/json
@@ -1006,7 +1006,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Create a new user
       tags:
-      - users
+      - users_1create
   /users/{id}:
     delete:
       description: Delete user by ID
@@ -1029,7 +1029,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Delete user
       tags:
-      - users
+      - users_5delete
     get:
       description: Get user details by ID
       parameters:
@@ -1051,7 +1051,7 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Get user by ID
       tags:
-      - users
+      - users_2get
     put:
       consumes:
       - application/json
@@ -1081,5 +1081,5 @@ paths:
             $ref: '#/definitions/response.Response'
       summary: Update user
       tags:
-      - users
+      - users_4update
 swagger: "2.0"
