# internal/controllers/candidate/education_controller.go
@@ -22,7 +22,7 @@ func NewCandidateEducationController(service serviceInterfaces.CandidateEducatio
 // CreateEducation godoc
 // @Summary Create a new education record
 // @Description Create a new education record for a candidate
-// @Tags education
+// @Tags education_1create
 // @Accept json
 // @Produce json
 // @Param id path string true "Candidate ID"
@@ -61,7 +61,7 @@ func (c *CandidateEducationController) CreateEducation(ctx *gin.Context) {
 // GetEducationByID godoc
 // @Summary Get education records by candidate ID
 // @Description Get all education records for a candidate by candidate ID
-// @Tags education
+// @Tags education_2get
 // @Produce json
 // @Param id path string true "Candidate ID"
 // @Success 200 {object} response.Response
@@ -95,7 +95,7 @@ func (c *CandidateEducationController) GetEducationByID(ctx *gin.Context) {
 // DeleteEducation godoc
 // @Summary Delete education record
 // @Description Delete an education record by candidate ID
-// @Tags education
+// @Tags education_3delete
 // @Produce json
 // @Param id path string true "Candidate ID"
 // @Success 200 {object} response.Response
