# internal/controllers/candidate/portfolio_controller.go
@@ -22,7 +22,7 @@ func NewCandidatePortfolioController(service serviceInterfaces.CandidatePortfoli
 // CreateProject godoc
 // @Summary Create a new project
 // @Description Create a new project for a candidate
-// @Tags portfolio
+// @Tags portfolio_1create
 // @Accept json
 // @Produce json
 // @Param id path string true "Candidate ID"
@@ -60,7 +60,7 @@ func (c *CandidatePortfolioController) CreateProject(ctx *gin.Context) {
 // GetProjectsByCandidateID godoc
 // @Summary Get projects by candidate ID
 // @Description Get all projects for a candidate by candidate ID
-// @Tags portfolio
+// @Tags portfolio_2get
 // @Produce json
 // @Param id path string true "Candidate ID"
 // @Success 200 {object} response.Response
@@ -94,7 +94,7 @@ func (c *CandidatePortfolioController) GetProjectsByCandidateID(ctx *gin.Context
 // DeleteProject godoc
 // @Summary Delete project
 // @Description Delete a project by candidate ID and project ID
-// @Tags portfolio
+// @Tags portfolio_3delete
 // @Produce json
 // @Param id path string true "Candidate ID"
 // @Param project_id path string true "Project ID"
